[gd_scene load_steps=2 format=3 uid="uid://oibeohh5ynys"]

[ext_resource type="Script" path="res://World/game_over.gd" id="1_xyvso"]

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_xyvso")

[node name="GameOverMenu" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="GameOverMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.184314)

[node name="CenterContainer" type="CenterContainer" parent="GameOverMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="GameOverMenu/CenterContainer"]
custom_minimum_size = Vector2(400, 180)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="GameOverMenu/CenterContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverMenu/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="GameOverMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Game Over"
horizontal_alignment = 1

[node name="LabelScore" type="Label" parent="GameOverMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Score: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="GameOverMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RestartButton" type="Button" parent="GameOverMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Restart"

[node name="QuitButton" type="Button" parent="GameOverMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Quit"

[connection signal="pressed" from="GameOverMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="GameOverMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
